--- a/frontend/src/app/shared/dialog-request-access/dialog-request-access.component.html
+++ b/frontend/src/app/shared/dialog-request-access/dialog-request-access.component.html
@@ -9,7 +9,10 @@
 
     <!--Status-->
     @if (hasRequest) {
-    <div class="status-badge"><span>STATUS: PENDING</span></div>
+    <div class="status-badge">
+      <span mat-symbol="clock_loader_40"></span>
+      <span class="status-text">STATUS: PENDING</span>
+    </div>
     }
 
     <p class="message">
