change global hover color for mat buttons

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.html
@@ -114,7 +114,7 @@
             >
               <button
                 mat-button
-                class="sec-ripple view-button"
+                class="view-button sec-ripple"
                 (click)="onView(element)"
                 [disabled]="element.is_enabled || isToggleAllChecked"
                 [ngClass]="{
@@ -136,7 +136,7 @@
             >
               <button
                 mat-button
-                class="sec-ripple export-button"
+                class="export-button sec-ripple"
                 (click)="onExportSingle(element)"
                 [disabled]="element.is_enabled || isToggleAllChecked"
                 [ngClass]="{
