--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -179,7 +179,7 @@
             <div class="action-button-container">
               <button
                 mat-button
-                class="sec-ripple edit-button"
+                class="edit-button sec-ripple"
                 (click)="openEditScheduleDialog(element)"
                 [disabled]="loadingScheduleId === element.schedule_id"
               >
