--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -58,7 +58,7 @@
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <button
               mat-button
-              class="edit-button"
+              class="edit-button sec-ripple"
               (click)="onManageYearLevels(element)"
             >
               <mat-icon>school</mat-icon>
@@ -74,7 +74,7 @@
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <button
               mat-button
-              class="edit-button"
+              class="edit-button sec-ripple"
               (click)="onManageSections(element)"
             >
               <mat-icon>view_list</mat-icon>
