--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -51,6 +51,20 @@
       text-align: center;
     }
 
+    .helper-container {
+      @include mixins.flex-layout($gap: var(--spacing-xxs));
+
+      .help-button {
+        opacity: var(--opacity-semi-opaque);
+        font-size: var(--font-size-md);
+        cursor: pointer;
+      }
+
+      .single-toggle {
+        padding-right: var(--spacing-mdx);
+      }
+    }
+
     .custom-header {
       text-wrap: nowrap;
       background-color: var(--primary-one);
@@ -102,6 +116,10 @@
         display: inline-block;
         background-color: var(--green-fade);
         color: var(--green-primary);
+      }
+
+      .none-text {
+        padding-right: var(--spacing-mdx);
       }
 
       .disabled-text {
