--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -143,21 +143,37 @@
         <!-- Toggle Column -->
         <ng-container matColumnDef="toggle">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            <mat-slide-toggle
-              class="header-toggle"
-              [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
-              [checked]="isToggleAllChecked"
-              [disabled]="!hasSchedulesForToggleAll"
-              (change)="onToggleAllSchedules($event)"
-            ></mat-slide-toggle>
+            <div class="helper-container">
+              <mat-slide-toggle
+                class="header-toggle"
+                [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
+                [checked]="isToggleAllChecked"
+                [disabled]="!hasSchedulesForToggleAll"
+                (change)="onToggleAllSchedules($event)"
+              ></mat-slide-toggle>
+              <span
+                mat-symbol="help"
+                [fill]="false"
+                class="help-button"
+                [matTooltip]="
+                  'This button allows you to toggle the publishing of\n
+                   official faculty schedules'
+                "
+              ></span>
+            </div>
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
-            <mat-slide-toggle
-              [checked]="element.isEnabled"
-              [disabled]="!element.schedules || element.schedules.length === 0"
-              [matTooltip]="getSingleToggleTooltip(element)"
-              (change)="onToggleSingleSchedule(element, $event)"
-            ></mat-slide-toggle>
+            <div class="helper-container">
+              <mat-slide-toggle
+                class="single-toggle"
+                [checked]="element.isEnabled"
+                [disabled]="
+                  !element.schedules || element.schedules.length === 0
+                "
+                [matTooltip]="getSingleToggleTooltip(element)"
+                (change)="onToggleSingleSchedule(element, $event)"
+              ></mat-slide-toggle>
+            </div>
           </td>
         </ng-container>
 
