--- a/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/curriculum/curriculum-detail/curriculum-detail.component.html
@@ -1,50 +1,35 @@
-<div class="curriculum-detail-container">
-  <!-- Table Header -->
-  <div class="curriculum-header-container" [@fadeAnimation]>
-    <app-table-header
-      [inputFields]="headerInputFields"
-      [addButtonLabel]="'Manage Programs'"
-      [addIconName]="'apps'"
-      [showExportDialog]="true"
-      [customExportOptions]="customExportOptions"
-      (export)="onExport($event)"
-      (inputChange)="onInputChange($event)"
-      (add)="onManagePrograms()"
-      [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
-    ></app-table-header>
-  </div>
+<!-- Table Header -->
+<div class="curriculum-header-container" [@fadeAnimation]>
+  <app-table-header
+  [inputFields]="headerInputFields"
+  [addButtonLabel]="'Manage Programs'"
+  [addIconName]="'apps'"
+  [showExportDialog]="true"
+  [customExportOptions]="customExportOptions"
+  (inputChange)="onInputChange($event)"
+  (export)="onExport()" 
+  (add)="onManagePrograms()"
+  [selectedValues]="{ program: selectedProgram, yearLevel: selectedYear }"
+></app-table-header>
+</div>
 
-  @if (showPreview) {
-  <div class="pdf-preview-container">
-    <button mat-button (click)="cancelPreview()">Cancel Preview</button>
-    <iframe id="pdfPreview" width="100%" height="600px"></iframe>
-  </div>
-  } @if (isLoading) {
-  <div class="loading-wrapper">
-    <app-loading></app-loading>
-  </div>
-  } @else {
-  <div class="curriculum-semesters-container">
-    <div class="scrollable-content">
-      @for (semester of selectedSemesters; track semester.semester; let i =
-      $index) {
-      <div class="semester-container" [@pageFloatUpAnimation]>
-        <app-table-generic
-          [columns]="columns"
-          [data]="semester.courses"
-          [tableName]="'course/s'"
-          [displayedColumns]="displayedColumns"
-          [showTableHeading]="true"
-          [tableHeadingTitle]="getSemesterDisplay(semester.semester)"
-          [tableHeadingButtonText]="'Add Course'"
-          [tableHeadingButtonIcon]="'add'"
-          (tableHeadingButtonClick)="onAddCourse(semester)"
-          (edit)="onEditCourse($event, semester)"
-          (delete)="onDeleteCourse($event)"
-        ></app-table-generic>
-      </div>
-      }
-    </div>
-  </div>
-  }
+<div class="curriculum-detail-container" [@pageFloatUpAnimation]>
+@for (semester of selectedSemesters; track semester.semester; let i = $index)
+{
+<div class="semester-container">
+  <app-table-generic
+    [columns]="columns"
+    [data]="semester.courses"
+    [tableName]="'course/s'"
+    [displayedColumns]="displayedColumns"
+    [showTableHeading]="true"
+    [tableHeadingTitle]="getSemesterDisplay(semester.semester)"
+    [tableHeadingButtonText]="'Add Course'"
+    [tableHeadingButtonIcon]="'add'"
+    (tableHeadingButtonClick)="onAddCourse(semester.semester)"
+    (edit)="onEditCourse($event)"
+    (delete)="onDeleteCourse($event)"
+  ></app-table-generic>
+</div>
+}
 </div>
