--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
@@ -107,27 +107,13 @@
             </td>
           </ng-container>
 
-          <!-- Preferred Day Column -->
-          <ng-container matColumnDef="preferredDay">
+          <!-- Preferred Day & Time Column -->
+          <ng-container matColumnDef="preferredDayTime">
             <th mat-header-cell *matHeaderCellDef class="custom-header">
-              Preferred Day
+              Preferred Day & Time
             </th>
             <td mat-cell *matCellDef="let element" class="custom-cell">
-              {{ element.preferred_day }}
-            </td>
-          </ng-container>
-
-          <!-- Preferred Time Column -->
-          <ng-container matColumnDef="preferredTime">
-            <th mat-header-cell *matHeaderCellDef class="custom-header">
-              Preferred Time
-            </th>
-            <td mat-cell *matCellDef="let element" class="custom-cell">
-              {{
-                convertToDate(element.preferred_start_time) | date : "h:mm a"
-              }}
-              -
-              {{ convertToDate(element.preferred_end_time) | date : "h:mm a" }}
+              {{ formatPreferredDaysAndTime(element) }}
             </td>
           </ng-container>
 
@@ -141,8 +127,7 @@
               'lecHours',
               'labHours',
               'units',
-              'preferredDay',
-              'preferredTime'
+              'preferredDayTime'
             ]"
           ></tr>
           <tr
@@ -156,15 +141,14 @@
                 'lecHours',
                 'labHours',
                 'units',
-                'preferredDay',
-                'preferredTime'
+                'preferredDayTime'
               ]
             "
           ></tr>
 
           <!-- No Data Row -->
           <tr *matNoDataRow>
-            <td class="no-data-cell" [attr.colspan]="8">
+            <td class="no-data-cell" [attr.colspan]="7">
               <div class="flex-cell">
                 <span mat-symbol="info"></span>
                 <span>No preferences has been submitted yet.</span>
