implement multi-preference schedule selection for a single course

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -269,16 +269,11 @@
     background-color: var(--neutral-light);
 
     .day-time-button-container {
-      @include mixins.flex-layout($justify: flex-start);
+      @include mixins.flex-layout;
 
       .day-time-button {
-        @include mixins.flex-layout;
         color: var(--primary-text);
-      }
-
-      mat-icon {
-        @include mixins.flex-layout;
-        padding: var(--spacing-sm);
+        cursor: pointer;
       }
     }
 
