--- a/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
+++ b/frontend/src/app/shared/dialog-pref/dialog-pref.component.html
@@ -151,7 +151,7 @@
             <td class="no-data-cell" [attr.colspan]="7">
               <div class="flex-cell">
                 <span mat-symbol="info"></span>
-                <span>No preferences has been submitted yet.</span>
+                <span>No preferences have been submitted yet.</span>
               </div>
             </td>
           </tr>
