--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -123,7 +123,7 @@
         </h3>
         <div class="programs-scroll-container">
           <div [@cardEntranceAnimation]="programs.length">
-            @for (program of programs; track trackByProgramId($index, program)){
+            @for (program of programs; track program.program_id) {
             <div
               class="program-card pop"
               (click)="selectProgram(program)"
@@ -150,8 +150,7 @@
         </h3>
         <div class="courses-scroll-container">
           <div [@cardEntranceAnimation]="filteredCourses.length">
-            @for (course of filteredCourses; track trackByCourseId($index,
-            course)) {
+            @for (course of filteredCourses; track course.course_id) {
             <div
               class="course-card pop"
               (click)="addCourseToTable(course)"
@@ -239,23 +238,21 @@
           </td>
         </ng-container>
 
-        <!-- Available Day & Time Column -->
-        <ng-container matColumnDef="availableDayTime">
+        <!-- Preferred Day & Time Column -->
+        <ng-container matColumnDef="preferredDayTime">
           <th mat-header-cell *matHeaderCellDef class="table-header">
-            Available Day & Time
+            Preferred Day & Time
           </th>
           <td mat-cell *matCellDef="let element" class="table-cell picker-cell">
             <div class="day-time-button-container">
-              <button
-                mat-button
+              <div
                 (click)="openDayTimeDialog(element)"
                 class="day-time-button"
               >
-                <mat-icon fontSet="material-icons-round">today</mat-icon>
                 <span class="display-day-time">
                   {{ formatSelectedDaysAndTime(element) }}
                 </span>
-              </button>
+              </div>
             </div>
           </td>
         </ng-container>
