--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -245,10 +245,7 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table-cell picker-cell">
             <div class="day-time-button-container">
-              <div
-                (click)="openDayTimeDialog(element)"
-                class="day-time-button"
-              >
+              <div (click)="openDayTimeDialog(element)" class="day-time-button">
                 <span class="display-day-time">
                   {{ formatSelectedDaysAndTime(element) }}
                 </span>
