fix search functionality on admin & user management

--- a/frontend/src/app/core/components/superadmin/management/admin/admin.component.html
+++ b/frontend/src/app/core/components/superadmin/management/admin/admin.component.html
@@ -11,7 +11,7 @@
       [searchLabel]="'Search Admins'"
       [addButtonLabel]="'Add Admin'"
       [inputFields]="headerInputFields"
-      (search)="onSearch($event)"
+      (inputChange)="onInputChange($event)"
       (add)="openAddAdminDialog()"
     ></app-table-header>
   </div>
