--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -11,7 +11,7 @@
       [searchLabel]="'Search Faculty'"
       [addButtonLabel]="'Add Faculty'"
       [inputFields]="headerInputFields"
-      (search)="onSearch($event)"
+      (inputChange)="onInputChange($event)"
       (add)="openAddFacultyDialog()"
     ></app-table-header>
   </div>
